# rqt_sonia_plugins

./: .gitignore  CMakeLists.txt  Dockerfile  DryTest.perspective  Mission.perspective  SONIA.perspective  package.xml  plugin.xml  setup.py  telemetry.perspective
.github/workflows/: docker-image-perception-develop.yml  docker-image-perception-feature.yml  docker-image-perception-fix.yml  docker-image-perception-master.yml
build-CanClient-Desktop-Debug/: Makefile  moc_can_client.cpp  ui_can_client.h
gui_mapping_client/: CMakeLists.txt  README.md  package.xml
gui_mapping_client/resource/: focused_frame.ui  focused_frame.ui.autosave  main_window.ui  resources.rqc
gui_mapping_client/src/gui_mapping_client/: main.cpp
gui_mapping_client/src/gui_mapping_client/gui/: focused_frame_controller.cc  focused_frame_controller.h  main_window_controller.cc  main_window_controller.h
gui_mapping_client/src/gui_mapping_client/ros/: communication_line.cc  communication_line.h
gui_mapping_client/src/gui_mapping_client/widgets/: image_frame.cc  image_frame.h  parameter.cc  parameter.h
gui_vision_client/: AUTHORS.md  CHANGELOG.md  CMakeLists.txt  TODO.md  package.xml
gui_vision_client/ui/: create_execution_window.ui  main_window.ui
rqt_actuator/: CMakeLists.txt  package.xml  plugin.xml  setup.py
rqt_actuator/resource/: mainWidget.ui
rqt_can_client/: CMakeLists.txt  LICENSE.md  package.xml
rqt_can_client/CanClient/: CanClient.pro  CanClient.pro.user.1.3  CanClient.pro.user.18  CanClient.pro.user.3.2-pre1
rqt_can_client/src/can_client/: main.cpp
rqt_can_client/src/can_client/main_window/: can_client.cpp  can_client.h
rqt_can_client/ui/: can_client.ui
rqt_console/: CMakeLists.txt  package.xml  plugin.xml
rqt_console/resource/: console_widget.ui
rqt_depth_indicator/: CMakeLists.txt  package.xml  plugin.xml  setup.py
rqt_depth_indicator/resource/: mainwidget.ui
rqt_depth_indicator/src/rqt_depth_indicator/: DepthIndicator.py  DepthIndicatorWidget.py
rqt_dvl/: CMakeLists.txt  package.xml  plugin.xml  setup.py
rqt_dvl/resource/: Mainwindow.ui  main_window.ui  mainwindow.ui
rqt_dvl/scripts/: rqt_dvl
rqt_dvl/src/rqt_dvl/: DvlWidget.py  dvl_client.py  main_window.py  provider_dvl_control.py
rqt_dvl/src/rqt_dvl/ros_comm/: services.py
rqt_dvl/src/rqt_dvl/widgets/: focused_frame.py
rqt_enable_axis/: CMakeLists.txt  package.xml  plugin.xml
rqt_enable_axis/resource/: Mainwindow.ui.autosave  mainwidget.ui
rqt_hydro_ping/: CMakeLists.txt  package.xml  plugin.xml  setup.py
rqt_hydro_ping/resource/: mainwidget.ui  mainwindow.ui
rqt_manage_bag/: CMakeLists.txt  package.xml  plugin.xml  setup.py
rqt_manage_bag/resource/: mainwindow.ui
rqt_manage_bag/scripts/: rqt_manage_bag
rqt_manual_hydro/rqt_manual_hydro/: CMakeLists.txt  package.xml  plugin.xml  setup.py
rqt_manual_vision/: CMakeLists.txt  package.xml  plugin.xml  setup.py
rqt_manual_vision/resource/: mainWidget.ui
rqt_manual_vision/src/rqt_manual_vision/: manual_vision.py  manual_vision_widget.py
rqt_mapping_client/: CMakeLists.txt  package.xml  plugin.xml  setup.py
rqt_mapping_client/resource/: main_window.ui
rqt_mapping_client/scripts/: rqt_mapping_client
rqt_mapping_client/src/rqt_mapping_client/: main_window.py  mapping_client.cc  mapping_client.h  mapping_client.py  ratio_layouted_frame.cc  ratio_layouted_frame.h  ros_communicator.cc  ros_communicator.h
rqt_mapping_client/src/rqt_mapping_client/widgets/: parameter_container.py
rqt_mapping_client/test/: ros_communicator_test.cc
rqt_mission_loader/: CMakeLists.txt  package.xml  plugin.xml  setup.py
rqt_mission_loader/resource/: mainWidget.ui
rqt_mission_loader/scripts/: rqt_mission_loader
rqt_mission_planner/: CMakeLists.txt  package.xml  plugin.xml  setup.py
rqt_mission_planner/resource/: load_mission.ui  mainWidget.ui  mainwindow.ui  save_mission.ui  sub_param.ui  tab_widget.ui
rqt_mission_planner/scripts/: rqt_mission_planner
rqt_navigation_map/: CMakeLists.txt  package.xml  plugin.xml
rqt_navigation_map/resource/: mainWidget.ui
rqt_navigation_map/scripts/: rqt_navigation_map  stl_loading.py
rqt_power/: CMakeLists.txt  package.xml  plugin.xml  setup.py
rqt_power/resource/: mainwindow.ui
rqt_power/scripts/: rqt_provider_power
rqt_sim_vision/: CMakeLists.txt  package.xml  plugin.xml  setup.py
rqt_sim_vision/resource/: mainwindow.ui
rqt_sim_vision/scripts/: rqt_sim_vision
rqt_test_board/: CMakeLists.txt  package.xml  plugin.xml  setup.py
rqt_test_board/resource/: mainwindow.ui
rqt_test_board/scripts/: rqt_test_board
rqt_thruster_control/: CMakeLists.txt  package.xml  plugin.xml  setup.py
rqt_thruster_control/resource/: Mainwindow.ui  Mainwindow.ui.autosave
rqt_thruster_effort/: package.xml  plugin.xml  setup.py
rqt_thruster_effort/resource/: mainwidget.ui
rqt_toolbar/: CMakeLists.txt  package.xml  plugin.xml  setup.py
rqt_toolbar/resource/: KillMission.ui  battery.ui  control_mode.ui  enable_axis.ui  palette.ui  set_control_mode.ui  start_cam.ui  temp_sensor.ui  warnings.ui
rqt_toolbar/src/rqt_toolbar/: Palette.py  ToolBar.py  ToolbarBatteryWidget.py  ToolbarCameraWidget.py  ToolbarControlModeWidget.py  ToolbarCpuTempWidget.py  ToolbarEnableAxisWidget.py  ToolbarKillmissionWidget.py  ToolbarSetControlMode.py  ToolbarWarningsWidget.py
rqt_vision/: CMakeLists.txt  package.xml  plugin.xml  setup.py
rqt_vision/resource/: config.ui  filters_parameter.ui  filters_parameter.ui.autosave  mainwidget.ui
rqt_vision/scripts/: rqt_vision
rqt_vision/src/rqt_vision/: ConfigWidget.py  ConfigureFilterchainWidget.py  VisionMainWidget.py  VisionStarter.py
rqt_waypoint/: CMakeLists.txt  package.xml  plugin.xml  setup.py
rqt_waypoint/resource/: Mainwindow.ui  Mainwindow.ui.autosave
src/: main.cpp
src/can_client/: main.cpp
src/gui/: create_execution_window_controller.cpp  create_execution_window_controller.h  focused_frame_controller.cpp  focused_frame_controller.h  main_window_controller.cpp  (+3 more)
ui/: can_client.ui  focused_frame.ui  main_window.ui  manage_filter_chains_window.ui
(+120 files in other folders)
