<?xml version="1.0"?>
<package>
    <name>gui_vision_client</name>
    <version>0.0.0</version>
    <description>The vision_client package</description>
    <maintainer email="kevin.coombs.cem@gmail.com">Kevin Coombs</maintainer>
    <maintainer email="thibaut.mattio@gmail.com">Thibaut Mattio</maintainer>
    <author email="kevin.coombs.cem@gmail.com">Kevin Coombs</author>
    <author email="thibaut.mattio@gmail.com">Thibaut Mattio</author>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>sonia_msgs</build_depend>
    <build_depend>provider_vision</build_depend>
    <build_depend>image_transport</build_depend>
    <build_depend>cv_bridge</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>sonia_msgs</run_depend>
    <run_depend>provider_vision</run_depend>
    <run_depend>image_transport</run_depend>
    <run_depend>cv_bridge</run_depend>
</package>
