<?xml version="1.0"?>
<package>
    <name>can_client</name>
    <version>0.0.0</version>
    <description>The can_client package</description>
    <maintainer email="alexidemers@gmail.com">Thibaut Mattio</maintainer>
    <author email="alexidemers@gmail.com">Thibaut Mattio</author>

    <license>GPLv3</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>sonia_msgs</build_depend>
    <build_depend>provider_can</build_depend>
    <build_depend>image_transport</build_depend>
    <build_depend>cv_bridge</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>sonia_msgs</run_depend>
    <run_depend>provider_can</run_depend>
    <run_depend>image_transport</run_depend>
    <run_depend>cv_bridge</run_depend>
</package>
