<?xml version="1.0"?>
<package>
  <name>rqt_depth_indicator</name>
  <version>0.0.0</version>
  <description>The rqt_depth_indicator package</description>

  <maintainer email="kevin.coombs.cem@gmail.com">kevin</maintainer>


  <license>GPLv3</license>



  <buildtool_depend>catkin</buildtool_depend>

    <run_depend>rospy</run_depend>
    <run_depend>rqt_gui</run_depend>
    <run_depend>rqt_gui_py</run_depend>


  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
 
  </export>
</package>
