<package>
  <name>rqt_dvl</name>
  <version>0.0.0</version>
  <description>rqt_dvl is a GUI that let the user interact with the provider_dvl.</description>
  <maintainer email="thibaut.mattio@gmail.com">Thibaut Mattio</maintainer>

  <license>GPLv3</license>

  <author>Thibaut Mattio</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>sonia_msgs</build_depend>

  <run_depend>python_qt_binding</run_depend>
  <run_depend>python-rospkg</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>
  <run_depend>sonia_msgs</run_depend>

  <export>
    <architecture_independent/>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
