<package>
  <name>rqt_manual_vision</name>
  <version>0.0.0</version>
  <description>rqt_mission_loader provide a convivial interface to load mission.</description>
  <maintainer email="kevin.coombs.cem@gmail.com">Kevin Coombs</maintainer>

  <license>BSD</license>


  <author>Kevin Coombs</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>gl_dependency</run_depend>
  <run_depend version_gte="0.2.19">python_qt_binding</run_depend>
  <run_depend>python-rospkg</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rostopic</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>
  <run_depend>rqt_py_common</run_depend>
  <run_depend>tf</run_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
