<?xml version="1.0"?>
<package>
  <name>rqt_vision</name>
  <version>0.0.0</version>
  <description>The rqt_vision package</description>

  <maintainer email="kevin.coombs.cem@gmail.com">kevin</maintainer>


  <license>GPLv3</license>



  <buildtool_depend>catkin</buildtool_depend>

    <run_depend>proc_control</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>rqt_gui</run_depend>
    <run_depend>rqt_gui_py</run_depend>
    <run_depend>cv_bridge</run_depend>
    <run_depend>sonia_msgs</run_depend> 

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
 
  </export>
</package>
